UltimaX Math Library/Source/UXMath/UXMath.h

_declspec(dllexport) float  _stdcall V3_Distance(D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) float  _stdcall V3_FastDistance(D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool  _stdcall  V3_ComputeBoundingBox(D3DVECTOR *Vertices, long NumVertices, D3DVECTOR& retBox_Min, D3DVECTOR& retBox_Max);
_declspec(dllexport) bool  _stdcall  V3_ComputeBoundingSphere(D3DVECTOR *Vertices, long NumVertices, D3DVECTOR& retSphereCenter, float retSphereRadius);
_declspec(dllexport) bool  _stdcall  V3_VectorContainedInBoundingBox(D3DVECTOR& Vector, D3DVECTOR& Box_Min, D3DVECTOR& Box_Max);
_declspec(dllexport) bool   _stdcall V3_IsCollision(D3DVECTOR& Collider_Position, float Collider_Radius, D3DVECTOR& Object_Position, float Object_Radius);
_declspec(dllexport) bool   _stdcall V3_IsCollisionEX(D3DVECTOR& Collider_Position, float Collider_Radius, D3DVECTOR& Object_Position, float Object_Radius);
_declspec(dllexport) bool   _stdcall V3_Interpolate_Linear(D3DVECTOR *retVector, float Time, D3DVECTOR *KeyFrame1, D3DVECTOR *KeyFrame2);
_declspec(dllexport) bool   _stdcall V3_Interpolate_LinearEX(D3DVECTOR *retVertices, long NumVertices, float Time, D3DVECTOR *KeyFrame1, D3DVECTOR2 *KeyFrame2);
_declspec(dllexport) bool   _stdcall V3_Interpolate_HermitSpline(D3DVECTOR *retVector, float Time, D3DVECTOR *KeyFrame1, D3DVECTOR *KeyFrame2, D3DVECTOR *KeyFrame3, D3DVECTOR *KeyFrame4);
_declspec(dllexport) bool   _stdcall V3_Interpolate_HermitSplineEX(D3DVECTOR *retVertices, long NumVertices, float Time, D3DVECTOR *KeyFrame1, D3DVECTOR *KeyFrame2, D3DVECTOR *KeyFrame3, D3DVECTOR *KeyFrame4);
_declspec(dllexport) bool   _stdcall V3_IntersectedPolygon(D3DVECTOR *Polygon, long NumVertices, D3DVECTOR& RayStart, D3DVECTOR& RayEnd);
_declspec(dllexport) bool   _stdcall V3_SpherePolygonCollision(D3DVECTOR *Vertices, long NumVertices, D3DVECTOR& SphereCenter, float SphereRadius);
_declspec(dllexport) bool   _stdcall V3_ClosestPointOnLine(D3DVECTOR& retVector, D3DVECTOR& LineStart, D3DVECTOR& LineEnd, D3DVECTOR& Point);
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                  Vector 4 Prototypes                   œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool  _stdcall V4_Zero(D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall V4_Negate(D3DVECTOR4& Vector);
_declspec(dllexport) float _stdcall V4_Magnitude(D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall V4_Normalize(D3DVECTOR4& Vector);
_declspec(dllexport) float _stdcall V4_MagnitudeSquared(D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall V4_Copy(D3DVECTOR4& retVector, D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall V4_Scale(D3DVECTOR4& retVector, D3DVECTOR4& Vector, float ScaleAmount);
_declspec(dllexport) bool  _stdcall V4_Minimize(D3DVECTOR4& retVector, D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_Maximize(D3DVECTOR4& retVector, D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) float _stdcall V4_Distance(D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_TwoVectorsAreNearlyEqual(D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_ComputeBoundingBox(D3DVECTOR4 *Vertices, long NumVertices, D3DVECTOR4& retBox_Min, D3DVECTOR4& retBox_Max);
_declspec(dllexport) bool  _stdcall V4_ComputeBoundingSphere(D3DVECTOR4 *Vertices, long NumVertices, D3DVECTOR4& retSphereCenter, float retSphereRadius);
_declspec(dllexport) bool  _stdcall V4_VectorContainedInBoundingBox(D3DVECTOR4& Vector, D3DVECTOR4& Box_Min, D3DVECTOR4& Box_Max);
_declspec(dllexport) bool  _stdcall V4_IsCollision(D3DVECTOR4& Collider_Position, float Collider_Radius, D3DVECTOR4& Object_Position, float Object_Radius);
_declspec(dllexport) bool  _stdcall V4_IsCollisionEX(D3DVECTOR4& Collider_Position, float Collider_Radius, D3DVECTOR4& Object_Position, float Object_Radius);
_declspec(dllexport) bool  _stdcall V4_Interpolate_Linear(D3DVECTOR4 *retVector, float Time, D3DVECTOR4 *KeyFrame1, D3DVECTOR4 *KeyFrame2);
_declspec(dllexport) bool  _stdcall V4_Interpolate_LinearEX(D3DVECTOR4 *retVertices, long NumVertices, float Time, D3DVECTOR2 *KeyFrame1, D3DVECTOR2 *KeyFrame2);
_declspec(dllexport) bool  _stdcall V4_Interpolate_HermitSpline(D3DVECTOR4 *retVector, float Time, D3DVECTOR4 *KeyFrame1, D3DVECTOR2 *KeyFrame2, D3DVECTOR4 *KeyFrame3, D3DVECTOR4 *KeyFrame4);
_declspec(dllexport) bool  _stdcall V4_Interpolate_HermitSplineEX(D3DVECTOR4 *retVertices, long NumVertices, float Time, D3DVECTOR2 *KeyFrame1, D3DVECTOR4 *KeyFrame2, D3DVECTOR4 *KeyFrame3, D3DVECTOR4 *KeyFrame4);
_declspec(dllexport) bool  _stdcall V4_Add(D3DVECTOR2& retVector, D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_Average(D3DVECTOR4& retVector, D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) float _stdcall V4_DotProduct(D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_Subtract(D3DVECTOR4& retVector, D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_DivideSV(D3DVECTOR4& retVector, float Scalar, D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall V4_DivideVS(D3DVECTOR4& retVector, D3DVECTOR4& Vector, float Scalar);
_declspec(dllexport) bool  _stdcall V4_DivideVV(D3DVECTOR4& retVector, D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
_declspec(dllexport) bool  _stdcall V4_MultiplySV(D3DVECTOR4& retVector, float Scalar, D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall V4_MultiplyVS(D3DVECTOR4& retVector, D3DVECTOR4& Vector, float Scalar);
_declspec(dllexport) float _stdcall V4_MultiplyVV(D3DVECTOR4& Vector1, D3DVECTOR4& Vector2);
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                    Color Prototypes                    œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool  _stdcall CLR_Black(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_LightGray(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_MediumGray(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_DarkGray(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_White(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Red(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Green(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Blue(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Magenta(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Cyan(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Yellow(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_Negate(D3DCOLORVALUE& retColor);
_declspec(dllexport) bool  _stdcall CLR_CapColor(D3DCOLORVALUE& Color);
_declspec(dllexport) bool  _stdcall CLR_Scale(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color, float ScaleAmount);
_declspec(dllexport) bool  _stdcall CLR_TwoColorsAreNearlyEqual(D3DCOLORVALUE& Color1, D3DCOLORVALUE& Color2);
_declspec(dllexport) bool  _stdcall CLR_Interpolate_Linear(D3DCOLORVALUE *retColor, float Time, D3DCOLORVALUE *Color1, D3DCOLORVALUE *Color2);
_declspec(dllexport) bool  _stdcall CLR_Interpolate_HermitSpline(D3DCOLORVALUE *retColor, float Time, D3DCOLORVALUE *Color1, D3DCOLORVALUE *Color2, D3DCOLORVALUE *Color3, D3DCOLORVALUE *Color4);
_declspec(dllexport) bool  _stdcall CLR_Add(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color1, D3DCOLORVALUE& Color2);
_declspec(dllexport) bool  _stdcall CLR_Average(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color1, D3DCOLORVALUE& Color2);
_declspec(dllexport) bool  _stdcall CLR_Subtract(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color1, D3DCOLORVALUE& Color2);
_declspec(dllexport) bool  _stdcall CLR_DivideSC(D3DCOLORVALUE& retColor, float Scalar, D3DCOLORVALUE& Color);
_declspec(dllexport) bool  _stdcall CLR_DivideCS(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color, float Scalar);
_declspec(dllexport) bool  _stdcall CLR_DivideCC(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color1, D3DCOLORVALUE& Color2);
_declspec(dllexport) bool  _stdcall CLR_MultiplySC(D3DCOLORVALUE& retColor, float Scalar, D3DCOLORVALUE& Color);
_declspec(dllexport) bool  _stdcall CLR_MultiplyCS(D3DCOLORVALUE& retColor, D3DCOLORVALUE& Color, float Scalar);
_declspec(dllexport) float _stdcall CLR_MultiplyCC(D3DCOLORVALUE& Color1, D3DCOLORVALUE& Color2);