UltimaX Math Library/UXMath VB APIs/UXMath.bas


'Collision Detection Functions
Public Declare Function V3_Distance Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Single
Public Declare Function V3_FastDistance Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Integer
Public Declare Function V3_IsCollision Lib "UXMath.dll" (ByRef Collider_Position As D3DVECTOR, ByVal Collider_Radius As Single, ByRef Object_Position As D3DVECTOR, ByVal Object_Radius As Single) As Boolean
Public Declare Function V3_IsCollisionEX Lib "UXMath.dll" (ByRef Collider_Position As D3DVECTOR, ByVal Collider_Radius As Single, ByRef Object_Position As D3DVECTOR, ByVal Object_Radius As Single) As Boolean
Public Declare Function V3_IntersectedPolygon Lib "UXMath.dll" (ByRef Polygon As D3DVECTOR, ByVal NumVertices As Long, ByRef RayStart As D3DVECTOR, ByRef RayEnd As D3DVECTOR) As Boolean
Public Declare Function V3_SpherePolygonCollision Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR, ByVal NumVertices As Long, ByRef SphereCenter As D3DVECTOR, ByVal SphereRadius As Single) As Boolean
Public Declare Function V3_ComputeBoundingBox Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR, ByVal NumVertices As Long, ByRef retBox_Min As D3DVECTOR, ByRef retBox_Max As D3DVECTOR) As Boolean
Public Declare Function V3_ComputeBoundingSphere Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR, ByVal NumVertices As Long, ByRef retSphereCenter As D3DVECTOR, ByRef retSphereRadius As Single) As Boolean
Public Declare Function V3_VectorContainedInBoundingBox Lib "UXMath.dll" (ByRef Vector As D3DVECTOR, ByRef Box_Min As D3DVECTOR, ByRef Box_Max As D3DVECTOR) As Boolean
Public Declare Function V3_ClosestPointOnLine Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef LineStart As D3DVECTOR, ByRef LineEnd As D3DVECTOR, ByRef Point As D3DVECTOR) As Boolean

'Vector Interpolation Functions
Public Declare Function V3_Interpolate_Linear Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR, ByRef KeyFrame2 As D3DVECTOR) As Boolean
Public Declare Function V3_Interpolate_LinearEX Lib "UXMath.dll" (ByRef retVertices As D3DVECTOR, ByVal NumVertices As Long, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR, ByRef KeyFrame2 As D3DVECTOR) As Boolean
Public Declare Function V3_Interpolate_HermitSpline Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR2, ByRef KeyFrame2 As D3DVECTOR, ByRef KeyFrame3 As D3DVECTOR, ByRef KeyFrame4 As D3DVECTOR) As Boolean
Public Declare Function V3_Interpolate_HermitSplineEX Lib "UXMath.dll" (ByRef retVertices As D3DVECTOR, ByVal NumVertices As Long, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR, ByRef KeyFrame2 As D3DVECTOR, ByRef KeyFrame3 As D3DVECTOR, ByRef KeyFrame4 As D3DVECTOR) As Boolean


'===VECTOR 4==============================================================================
'-----------------------------------------------------------------------------------------


'Math/Manipulation Functions
Public Declare Function V4_Zero Lib "UXMath.dll" (ByRef Vector As D3DVECTOR4) As Boolean
Public Declare Function V4_Negate Lib "UXMath.dll" (ByRef Vector As D3DVECTOR4) As Boolean
Public Declare Function V4_Magnitude Lib "UXMath.dll" (ByRef Vector As D3DVECTOR4) As Single
Public Declare Function V4_Normalize Lib "UXMath.dll" (ByRef Vector As D3DVECTOR4) As Boolean
Public Declare Function V4_MagnitudeSquared Lib "UXMath.dll" (ByRef Vector As D3DVECTOR4) As Single
Public Declare Function V4_Copy Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector As D3DVECTOR4) As Boolean
Public Declare Function V4_Scale Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector As D3DVECTOR4, ByVal ScaleAmount As Single) As Boolean
Public Declare Function V4_Minimize Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean
Public Declare Function V4_Maximize Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean
Public Declare Function V4_Add Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean
Public Declare Function V4_Average Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean
Public Declare Function V4_DotProduct Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Single
Public Declare Function V4_Subtract Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean
Public Declare Function V4_DivideSV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByVal Scalar As Single, ByRef Vector As D3DVECTOR4) As Boolean
Public Declare Function V4_DivideVS Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector As D3DVECTOR4, ByVal Scalar As Single) As Boolean
Public Declare Function V4_DivideVV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean
Public Declare Function V4_MultiplySV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByVal Scalar As Single, ByRef Vector As D3DVECTOR4) As Boolean
Public Declare Function V4_MultiplyVS Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByRef Vector As D3DVECTOR4, ByVal Scalar As Single) As Boolean
Public Declare Function V4_MultiplyVV Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Single
Public Declare Function V4_TwoVectorsAreNearlyEqual Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Boolean

'Collision Detection Functions
Public Declare Function V4_Distance Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR4, ByRef Vector2 As D3DVECTOR4) As Single
Public Declare Function V4_IsCollision Lib "UXMath.dll" (ByRef Collider_Position As D3DVECTOR4, ByVal Collider_Radius As Single, ByRef Object_Position As D3DVECTOR4, ByVal Object_Radius As Single) As Boolean
Public Declare Function V4_IsCollisionEX Lib "UXMath.dll" (ByRef Collider_Position As D3DVECTOR4, ByVal Collider_Radius As Single, ByRef Object_Position As D3DVECTOR4, ByVal Object_Radius As Single) As Boolean
Public Declare Function V4_ComputeBoundingBox Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR4, ByVal NumVertices As Long, ByRef retBox_Min As D3DVECTOR4, ByRef retBox_Max As D3DVECTOR4) As Boolean
Public Declare Function V4_ComputeBoundingSphere Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR4, ByVal NumVertices As Long, ByRef retSphereCenter As D3DVECTOR4, ByRef retSphereRadius As Single) As Boolean
Public Declare Function V4_VectorContainedInBoundingBox Lib "UXMath.dll" (ByRef Vector As D3DVECTOR4, ByRef Box_Min As D3DVECTOR4, ByRef Box_Max As D3DVECTOR4) As Boolean

'Vector Interpolation Functions
Public Declare Function V4_Interpolate_Linear Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR4, ByRef KeyFrame2 As D3DVECTOR4) As Boolean
Public Declare Function V4_Interpolate_LinearEX Lib "UXMath.dll" (ByRef retVertices As D3DVECTOR4, ByVal NumVertices As Long, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR4, ByRef KeyFrame2 As D3DVECTOR4) As Boolean
Public Declare Function V4_Interpolate_HermitSpline Lib "UXMath.dll" (ByRef retVector As D3DVECTOR4, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR4, ByRef KeyFrame2 As D3DVECTOR4, ByRef KeyFrame3 As D3DVECTOR4, ByRef KeyFrame4 As D3DVECTOR4) As Boolean
Public Declare Function V4_Interpolate_HermitSplineEX Lib "UXMath.dll" (ByRef retVertices As D3DVECTOR4, ByVal NumVertices As Long, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR4, ByRef KeyFrame2 As D3DVECTOR4, ByRef KeyFrame3 As D3DVECTOR4, ByRef KeyFrame4 As D3DVECTOR4) As Boolean


'===COLOR=================================================================================
'-----------------------------------------------------------------------------------------


'Constant Colors Functions
Public Declare Function CLR_Black Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_LightGray Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_MediumGray Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_DarkGray Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_White Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Red Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Green Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Blue Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Magenta Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Cyan Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Yellow Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean

'Color Math/Manipulation Functions
Public Declare Function CLR_Negate Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_CapColor Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Scale Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByRef Color As D3DCOLORVALUE, ByVal ScaleAmount As Single) As Boolean
Public Declare Function CLR_Add Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByRef Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Average Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByRef Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Subtract Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByRef Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_DivideSC Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Scalar As Single, ByRef Color As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_DivideCS Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Color As D3DCOLORVALUE, ByRef Scalar As Single) As Boolean
Public Declare Function CLR_DivideCC Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_MultiplySC Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Scalar As Single, ByRef Color As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_MultiplyCS Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Color As D3DCOLORVALUE, ByRef Scalar As Single) As Boolean
Public Declare Function CLR_MultiplyCC Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Single
Public Declare Function CLR_TwoColorsAreNearlyEqual Lib "UXMath.dll" (ByRef Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Boolean

'Color Interpolation Functions
Public Declare Function CLR_Interpolate_Linear Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Time As Single, ByRef Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE) As Boolean
Public Declare Function CLR_Interpolate_HermitSpline Lib "UXMath.dll" (ByRef retColor As D3DCOLORVALUE, ByVal Time As Single, ByRef Color1 As D3DCOLORVALUE, ByRef Color2 As D3DCOLORVALUE, ByRef Color3 As D3DCOLORVALUE, ByRef Color4 As D3DCOLORVALUE) As Boolean


'===3x3 Matrix============================================================================
'-----------------------------------------------------------------------------------------

